# odd-hdfs-poc

./: pyproject.toml
odd_examples/: cli_add_entities.py
odd_examples/odd_hdfs/: HDFSArtifact.py  HDFSGenerator.py  HDFSPathsModel.py  HDFSServerModel.py
