[tool.poetry]
name = "odd-examples"
version = "0.1.0"
description = ""
authors = ["Cedric Hurst <cedric@spantree.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
sqlparse = "0.4.2"
requests = "2.28.2"
sql-metadata = "^2.6.0"
loguru = "^0.6.0"
oddrn-generator = "^0.1.75"
funcy = "^2.0"
odd-models = "^2.0.30"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.0"
datamodel-code-generator = "^0.17.2"
pytest-mock = "^3.10.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
add-entities = "odd_examples.cli_add_entities:main"
